qualification data gap  fixed
in section padding-bottom  is changed to 4rem

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -569,7 +569,7 @@ img{
 .qualification__data{
         display: grid;
         grid-template-columns: 1fr max-content 1fr;
-        column-gap: 1.5rem;
+        column-gap: .4rem;
 }
 
 .qualification__title{
@@ -924,7 +924,7 @@ img{
          }
 
          .section{
-                 padding: 6rem 0 2rem;
+                 padding: 4rem 0 2rem;
          }
 
          .section__subtitle{
@@ -1058,5 +1058,9 @@ img{
 
         .home__content{
                 border: 1px solid red;
+        }
+
+        .footer{
+                margin-bottom: 0px;
         }
 }
